--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "tcl/storyboard-language"]
 	path = tcl/storyboard-language
 	url = https://github.com/michaelfeurstein/storyboard-language
+	branch = main
